--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
+# git ls-files --others --exclude-from=.git/info/exclude
+# Lines that start with '#' are comments.
+# For a project mostly in C, the following would be a good set of
+# exclude patterns (uncomment them if you want to use them):
+# *.[oa]
+# *~
+# .git/info/exclude
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
+**/pull_request_template.md
+**/issue_template.md
+**/target/
+**/bin/
+**/META-INF/**
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+#Eclipse
+**/.metadata
+**/.project
+**/.settings/
+**/.classpath
+**/.recommenders/**
+**/Servers
+**/.springBeans
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+#IDEA
+**/.idea/
+**/*.iml
+
+#AngularJS
+**/.tern-project
+
+#Mac
+.DS_Store
+/.recommenders/
